Added todo and bugreport commands. Added bot ownership check for exit command

--- a/shadowbot.config
+++ b/shadowbot.config
@@ -4,3 +4,6 @@ command_prefix=!
 channel_name=general
 #put in your custom bot token here. Bot will not work without it
 bot_token=<replace with bot token>
+#TODO I have called DIR on many different objects none of them contain the is_owner function
+#So we have to code it it manually. This param is optional, if not provided the exit/other owner only commands will not work.
+author_id=<replace with author ID>
